# SMT

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
completed-tdd-archives/tdd-20260711-113428/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-115006/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-115538/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-120056/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-120541/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-121334/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-151303/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-152041/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-152828/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
completed-tdd-archives/tdd-20260711-155759/: step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md
packaging/: SMTGuard.spec  SMTReceiptLabels.spec
scripts/: build_receipt_labels.ps1  build_windows.ps1  create_station_template.py  verify_release.ps1
templates/: 站位表导入模板.xlsx
tests/: __init__.py
(+114 files in other folders)
