[project]
name = "smt-guard"
version = "0.1.0"
description = "Offline Windows SMT material verification application"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openpyxl>=3.1.5,<4",
    "pyside6>=6.8,<7",
]

[project.scripts]
smt-guard = "smt_guard.app:main"

[dependency-groups]
dev = [
    "bandit>=1.8,<2",
    "pip-audit>=2.9,<3",
    "pyinstaller>=6.14,<7",
    "pyright>=1.1.400",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6,<8",
    "radon>=6,<7",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smt_guard"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
